# podservice

./: DEPLOYMENT.md  Makefile  README.md  REPO.md  config.example.yaml  flake.nix  pyproject.toml
nix/: example-config.nix  service.nix
pod_service/: config.py
podservice/: __init__.py  __main__.py  cli.py  config.py  daemon.py  downloader.py  feed.py  server.py  utils.py  watcher.py
tests/: test_api.py
